--- a/index.html
+++ b/index.html
@@ -2,10 +2,87 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Лабораторная 1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Проект: Онлайн-библиотека (каталог книг)</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Проверка Live Server</h1>
-    <p>Это мой первый запрос к серверу.</p>
+    <!-- Шапка сайта -->
+    <header>
+        <h1>Онлайн-библиотека(Каталог книг)</h1>
+        <nav>
+            <ul>
+                <li><a href="#/">Главная</a></li>
+                <li><a href="#/">Каталог книг</a></li>
+                <li><a href="#/">Мои книги</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Основное содержимое -->
+    <main>
+        <!-- Форма добавления новой книги -->
+        <section class="add-book-section">
+            <h2>Добавить новую книгу</h2>
+            <article>
+                <form class="add-book-form" id="add-book-form">
+                    <div class="form-group">
+                        <label for="book-name">Название книги:</label>
+                        <input type="text" 
+                               id="book-name" 
+                               name="book-name" 
+                               required>
+                    </div>
+                    <div class="form-group">
+                        <label for="author">Автор:</label>
+                        <input type="text" 
+                               id="author" 
+                               name="author" 
+                               required>
+                    </div>
+                    <div class="form-group">
+                        <label for="year">Год издания:</label>
+                        <input type="number" 
+                               id="year" 
+                               name="year" 
+                               min="1000" 
+                               max="2100">
+                    </div>
+                    <button type="submit" class="btn">Добавить книгу</button>
+                </form>
+            </article>
+        </section>
+
+        <!-- Контейнер для сообщений об ошибках/успехе -->
+        <div id="form-message"></div>
+
+        <!-- Таблица и сетка с книгами -->
+        <section>
+            <h2>Популярные книги в каталоге</h2>
+            <article>
+                <img src="https://placehold.co/600x150/EEE/31343C?text=Online+Library+Banner" 
+                     alt="Баннер библиотеки" 
+                     style="width: 100%; max-width: 600px;">
+            </article>
+        </section>
+
+        <!-- Контейнер для карточек книг в сетке -->
+        <aside class="filters">
+            <!-- Фильтры можно добавить позже -->
+        </aside>
+
+        <!-- Сетка книг -->
+        <div class="books-grid" id="books-grid">
+            <!-- Карточки книг будут добавляться сюда динамически -->
+        </div>
+    </main>
+
+    <!-- Подвал сайта -->
+    <footer>
+        <p>&copy; 2025 Бабакина Ирина. Все права защищены.</p>
+    </footer>
+
+    <!-- Подключение JavaScript файла -->
+    <script src="library.js"></script>
 </body>
 </html>
